lots of cleanup and mobile styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1: VizBlocks
     {% include intro.html %}
     {% include blocks.html %}
     {% include system.html %}
-    {% include builds.html %}
+    <!-- {% include builds.html %} -->
     {% include contact-button.html %}
     {% include footer.html %}
   </body>
