more mobile functionality

--- a/about.html
+++ b/about.html
@@ -12,11 +12,17 @@ h1: About VizBlocks
   </head>
   <body>
     <div class="container">
-      <h1 class="no-banner">{{ page.h1 }}</h1>
+      <h1 id="no-banner" class="desktop">{{ page.h1 }}</h1>
     </div>
     {% include intro.html %}
     {% include authors.html %}
     {% include contact-button.html %}
     {% include footer.html %}
   </body>
+  <script>
+    if (touchDevice) {
+      const element = document.getElementById("no-banner");
+      element.className = "mobile";
+    }
+  </script>
 </html>
